[gd_scene load_steps=3 format=3 uid="uid://cgpix3csqmscw"]

[ext_resource type="Script" uid="uid://cp770un7ueiaw" path="res://script/main_menu.gd" id="1_hxu56"]
[ext_resource type="Texture2D" uid="uid://5nepjtfdx30o" path="res://texture/jsp/fond d'eoile.png" id="2_hxu56"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hxu56")

[node name="fond d\'ecran" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hxu56")
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 169.0
offset_top = 254.0
offset_right = 556.0
offset_bottom = 330.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 55
text = "Mitosplosion !!"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 205.0
offset_top = -188.0
offset_right = 702.0
offset_bottom = 207.0
grow_vertical = 2
theme_override_constants/separation = 20

[node name="jouer" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Commencer l'exploration"

[node name="atelier" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Atelier"

[node name="galerie des trophes" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Galerie des trophées"

[node name="reglage" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Réglages"

[node name="quitter" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "quitter"

[node name="quitter2" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "QUITTER"

[connection signal="button_down" from="VBoxContainer/jouer" to="." method="_on_button_button_down"]
[connection signal="button_down" from="VBoxContainer/atelier" to="." method="_on_atelier_button_down"]
[connection signal="button_down" from="VBoxContainer/galerie des trophes" to="." method="_on_galerie_des_trophes_button_down"]
[connection signal="button_down" from="VBoxContainer/reglage" to="." method="_on_reglage_button_down"]
[connection signal="button_down" from="VBoxContainer/quitter" to="." method="_on_quitter_button_down"]
[connection signal="button_down" from="VBoxContainer/quitter2" to="." method="_on_quitter_2_button_down"]
